--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,14 +39,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:lines="1"
             android:textColor="@color/color_grey_light"
             android:textColorHint="@color/color_grey_light"
-            android:hint="Введите текст"
+            android:hint="@string/et_message_hint"
             android:paddingTop="@dimen/spacing_normal_16"
             android:paddingBottom="@dimen/spacing_normal_16"
             android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_marginRight="@dimen/spacing_normal_16"/>
+            android:layout_marginRight="@dimen/spacing_normal_16"
+            android:inputType="text"
+            android:lines="1"
+            />
+        <!--android:imeOptions="actionDone"-->
 
         <ImageView
             android:id="@+id/iv_send"
