--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -239,6 +239,7 @@
             android:src="@drawable/ic_repo"/>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/wr_repository"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_normal_16"
@@ -260,7 +261,7 @@
             android:id="@+id/ic_eye"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginLeft="@dimen/spacing_normal_16"
+            android:layout_marginStart="@dimen/spacing_normal_16"
             android:src="@drawable/ic_eye_24dp"
             android:layout_gravity="center_vertical"/>
 
